добавил в каждый script use strict

--- a/hw_5/task_first_level/1 поиск элементов на странице/1-поиск_по_id.html
+++ b/hw_5/task_first_level/1 поиск элементов на странице/1-поиск_по_id.html
@@ -17,6 +17,7 @@
     и выведите ее в консоль. -->
 
     <script>
+        'use strict';
         let test = document.getElementById('four');
         console.log(test);
     </script>
