--- a/hw_5/task_first_level/1 поиск элементов на странице/3-поиск_всех_элементов_по_селектору.html
+++ b/hw_5/task_first_level/1 поиск элементов на странице/3-поиск_всех_элементов_по_селектору.html
@@ -29,6 +29,7 @@
     и выведите их в консоль. -->
 
     <script>
+        'use strict';
         let test = document.querySelectorAll('.card-body > .card-link');
 
         console.log(test);
