--- a/hw_5/task_first_level/1 поиск элементов на странице/5-название_вкладки.html
+++ b/hw_5/task_first_level/1 поиск элементов на странице/5-название_вкладки.html
@@ -11,6 +11,7 @@
     <!-- Задание. Выведите содержимое тега title в консоль. -->
 
     <script>
+        'use strict';
         let test = document.querySelector('title');
         console.log(test.innerText);
     </script>
