--- a/hw_5/task_first_level/2 класс node/1-получение_родительского_узла.html
+++ b/hw_5/task_first_level/2 класс node/1-получение_родительского_узла.html
@@ -29,6 +29,7 @@
     классом .media-body. -->
 
     <script>
+        'use strict';
         let test = document.querySelector('.mt-0');
         console.log(test.parentNode);
     </script>
