--- a/hw_5/task_first_level/2 класс node/2-добавление_элемента_с_appendChild.html
+++ b/hw_5/task_first_level/2 класс node/2-добавление_элемента_с_appendChild.html
@@ -18,6 +18,7 @@
     -->
 
     <script>
+        'use strict';
         let test = document.querySelector('div');
         let paragraph = Object.assign(document.createElement('h3'), { innerText: 'hello world' });
         test.appendChild(paragraph);
