--- a/hw_5/task_first_level/2 класс node/3-удаление_узлов.html
+++ b/hw_5/task_first_level/2 класс node/3-удаление_узлов.html
@@ -22,6 +22,7 @@
     2. Аналогичным образом удалите элемент с классом .btn-outline-dark -->
 
     <script>
+        'use strict';
         let task_one = document.getElementsByClassName('btn-outline-warning');
         for (let i = 0; i < task_one.length; i++) {
             task_one[i].remove();
