--- a/hw_5/task_first_level/2 класс node/4-замена_текста_в_элементе.html
+++ b/hw_5/task_first_level/2 класс node/4-замена_текста_в_элементе.html
@@ -22,6 +22,7 @@
     <!-- Задание. Найдите кнопку с классом .btn-info и сделайте текст в кнопке: "Кнопка".-->
 
     <script>
+        'use strict';
         Object.assign(document.querySelector('.btn-info'), { innerText: 'Кнопка' });
 
         // let test = document.querySelector('.btn-info');
