--- a/hw_5/task_first_level/3 работа с атрибутами/1-добавление_классов.html
+++ b/hw_5/task_first_level/3 работа с атрибутами/1-добавление_классов.html
@@ -18,6 +18,7 @@
     <!-- Задание. Найдите тег ul. И добавьте ему класс one. -->
 
     <script>
+        'use strict';
         let test = document.querySelectorAll('li');
         test.forEach(element => element.classList.add('one'));
     </script>
