--- a/hw_5/task_first_level/3 работа с атрибутами/2-toggle.html
+++ b/hw_5/task_first_level/3 работа с атрибутами/2-toggle.html
@@ -18,6 +18,7 @@
     у элемента, добавьте или уберите класс .active. -->
 
     <script>
+        'use strict';
         let test = document.querySelector('.nav-link');
         test.classList.toggle('active');
     </script>
