--- a/hw_5/task_first_level/3 работа с атрибутами/3-удаление_классов.html
+++ b/hw_5/task_first_level/3 работа с атрибутами/3-удаление_классов.html
@@ -24,6 +24,7 @@
     у элемента, и метод remove(). -->
 
     <script>
+        'use strict';
         let test = document.getElementsByClassName('dropdown-menu');
         for (let i = 0; i < test.length; i++) {
             test[i].classList.remove('dropdown-menu');
