--- a/hw_5/task_first_level/3 работа с атрибутами/4-удобная_вставка.html
+++ b/hw_5/task_first_level/3 работа с атрибутами/4-удобная_вставка.html
@@ -17,6 +17,7 @@
     -->
 
     <script>
+        'use strict';
         let test = document.getElementsByTagName('div');
         for (let i = 0; i < test.length; i++) {
             test[i].insertAdjacentHTML('afterbegin', '<a href="#">link</a>');
