--- a/hw_5/task_first_level/3 работа с атрибутами/7-замена_id.html
+++ b/hw_5/task_first_level/3 работа с атрибутами/7-замена_id.html
@@ -21,6 +21,7 @@
     на что-то другое. -->
 
     <script>
+        'use strict';
         let test = document.getElementById('title');
         test.id = 'new_id';
     </script>
