--- a/hw_5/task_first_level/4 обработка событий/3-событие_мыши.html
+++ b/hw_5/task_first_level/4 обработка событий/3-событие_мыши.html
@@ -16,6 +16,7 @@
     alert('клик') -->
 
     <script>
+        'use strict';
         let test = document.getElementsByClassName('btn');
         for (let i = 0; i < test.length; i++) {
             test[i].addEventListener('click', function () {
