--- a/hw_5/task_first_level/4 обработка событий/4-событие_мыши.html
+++ b/hw_5/task_first_level/4 обработка событий/4-событие_мыши.html
@@ -14,6 +14,7 @@
     появлялось сообщение: "вы навели на textarea" -->
 
     <script>
+        'use strict';
         let test = document.getElementsByTagName('textarea');
         for (let i = 0; i < test.length; i++) {
             test[i].addEventListener('mouseover', function () {
