--- a/hw_5/task_first_level/1 поиск элементов на странице/2-поиск_по_имени_класса.html
+++ b/hw_5/task_first_level/1 поиск элементов на странице/2-поиск_по_имени_класса.html
@@ -18,6 +18,7 @@
     и выведите их в консоль. -->
 
     <script>
+        'use strict';
         let test = document.getElementsByClassName('one');
 
         console.log(test);
