--- a/hw_5/task_first_level/1 поиск элементов на странице/4-поиск_одного_элемента_по_селектору.html
+++ b/hw_5/task_first_level/1 поиск элементов на странице/4-поиск_одного_элемента_по_селектору.html
@@ -32,6 +32,7 @@
     aria-valuenow="50" и выведите его в консоль. -->
 
   <script>
+    'use strict';
     let test = document.querySelector('div[aria-valuenow="50"]');
     console.log(test);
   </script>
