--- a/hw_5/task_first_level/3 работа с атрибутами/5-получение_атрибута.html
+++ b/hw_5/task_first_level/3 работа с атрибутами/5-получение_атрибута.html
@@ -16,6 +16,7 @@
     и aria-label с помощью метода getAttribute. -->
 
     <script>
+        'use strict';
         let test = document.querySelector('.close');
         console.log(test.getAttribute('data-dismiss'));
         console.log(test.getAttribute('aria-label'));
