--- a/hw_5/task_first_level/3 работа с атрибутами/6-создание_атрибута.html
+++ b/hw_5/task_first_level/3 работа с атрибутами/6-создание_атрибута.html
@@ -14,6 +14,7 @@
     data-two="два" с помощью метода setAttribute. -->
 
     <script>
+        'use strict';
         let test = document.getElementsByTagName('h1');
         for (let i = 0; i < test.length; i++) {
             test[i].setAttribute('data-one', 'один');
