--- a/hw_5/task_first_level/4 обработка событий/2-событие_загрузки.html
+++ b/hw_5/task_first_level/4 обработка событий/2-событие_загрузки.html
@@ -25,6 +25,7 @@
     покажите с помощью alert сообщение: "все картинки загружены". -->
 
     <script>
+        'use strict';
         window.addEventListener('load', function () {
             alert('Все картинки загружены');
         });
