выполнил все задания 6 урока

--- a/hw_6/task_three_level/1-удаление_блока_по_клику/messages.html
+++ b/hw_6/task_three_level/1-удаление_блока_по_клику/messages.html
@@ -44,9 +44,16 @@
     -->
 
     <script>
+        'use strict';
+
+        let all_button = document.querySelectorAll('button');
+
+        all_button.forEach(function (element) {
+            element.addEventListener('click', closeClickHandler);
+        });
 
         function closeClickHandler(event) {
-           
+            event.currentTarget.parentNode.style.display = 'none';
         }
     </script>
 </body>
