--- a/hw_6/task_first_level/3-карточки_товаров/cards.html
+++ b/hw_6/task_first_level/3-карточки_товаров/cards.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="product">
         <div class="productName">Товар 1</div>
@@ -44,7 +46,15 @@
     -->
 
     <script>
+        'use strict';
+
+        let product = document.querySelectorAll('.product');
+        product.forEach(element => element.style.background = 'yellow');
+
+        let productName = document.querySelectorAll('.productName');
+        product.forEach(element => element.style.fontSize = '24px');
 
     </script>
 </body>
+
 </html>
