--- a/hw_6/task_first_level/5-добавить_отступы.html
+++ b/hw_6/task_first_level/5-добавить_отступы.html
@@ -25,7 +25,11 @@
     -->
 
     <script>
-        
+        'use strict';
+
+        let test = document.querySelectorAll('input');
+        test.forEach(element => element.style.marginBottom = '30px');
+
     </script>
 </body>
 
