--- a/hw_6/task_three_level/2-добавление_в_корзину/toCart.html
+++ b/hw_6/task_three_level/2-добавление_в_корзину/toCart.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="product">
         <div>Товар 1</div>
@@ -41,11 +43,18 @@
     -->
 
     <script>
-        
-		
-		function buttonClickHandler(event) {
-		
-		}
+        'use strict';
+
+        let all_button = document.querySelectorAll('button');
+        all_button.forEach(function (event) {
+            event.addEventListener('click', buttonClickHandler);
+        });
+
+        function buttonClickHandler(event) {
+            event.target.parentNode.style.background = 'lightgreen';
+            event.target.innerText = 'Добавлено';
+        };
     </script>
 </body>
+
 </html>
