--- a/hw_6/task_three_level/3-валидация_формы/validation.html
+++ b/hw_6/task_three_level/3-валидация_формы/validation.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
         }
     </style>
 </head>
+
 <body>
     <form>
         <input id="first" type="text"><br>
@@ -18,6 +20,7 @@
         <br>
         <button>Отправить</button>
     </form>
+
 
     <!-- 
         Задание. Вам нужно проверять пусто ли в input'ах при отправке формы.
@@ -36,7 +39,25 @@
      -->
 
     <script>
-        
+        'use strict';
+
+        let formEl = document.querySelector('form');
+        let inputFirst = document.getElementById('first');
+        let inputSecond = document.getElementById('second');
+
+        formEl.addEventListener('submit', function (event) {
+            if (inputFirst.value == '') {
+                inputFirst.style.borderColor = 'red';
+                event.preventDefault();
+            }
+
+            if (inputSecond.value == '') {
+                inputSecond.style.borderColor = 'red';
+                event.preventDefault();
+            }
+        });
+
     </script>
 </body>
+
 </html>
