--- a/hw_7/game_snake/index.html
+++ b/hw_7/game_snake/index.html
@@ -11,6 +11,11 @@
 
 <body>
 
+    <div class="score">
+        Счёт игры:
+        <span class="current">0</span> / <span class="toWin"></span>
+    </div>
+
     <table id="game"></table>
 
     <button id="startBtn">Старт</button>
@@ -26,6 +31,7 @@
     <script src="src/Food.js"></script>
     <script src="src/Game.js"></script>
     <script src="src/Menu.js"></script>
+    <script src="src/Score.js"></script>
 </body>
 
 </html>
