--- a/hw_7/game_snake/index.html
+++ b/hw_7/game_snake/index.html
@@ -13,7 +13,7 @@
 
     <div class="score">
         Счёт игры:
-        <span class="current">0</span> / <span class="toWin"></span>
+        <span class="current">1</span> / <span class="toWin"></span>
     </div>
 
     <table id="game"></table>
@@ -28,10 +28,9 @@
     <script src="src/Status.js"></script>
     <script src="src/Snake.js"></script>
     <script src="src/Board.js"></script>
-    <script src="src/Food.js"></script>
-    <script src="src/Game.js"></script>
-    <script src="src/Menu.js"></script>
     <script src="src/Score.js"></script>
+    <script src="src/Controls.js"></script>
+    <script src="src/Game.js"></script>
 </body>
 
 </html>
